For-now fix for overflow.

--- a/public/main.less
+++ b/public/main.less
@@ -1,8 +1,11 @@
 @import (reference) "~ui/styles/base.less";
 
 .application { // Propogates flex all the way to our <react> element
-  > * { flex-grow: 1; display: flex;
-    > * { flex-grow: 1; display: flex; }}}
+  overflow: auto;
+
+  &> * { flex-grow: 1; display: flex;
+    &> * { flex-grow: 1; display: flex; }}}
+
 
 a {
   cursor: pointer;
